WB-78: backend refactoring wip